Fixed a weird style issue that was causing overflow of the body when a dialog was shown

--- a/src/ui/static/app.css
+++ b/src/ui/static/app.css
@@ -1,5 +1,4 @@
 body {
-  padding: 10px;
   font-size: 17px;
 }
 
@@ -70,4 +69,10 @@ md-card md-card-title {
   max-width: 500px;
   width: 100%;
   margin: auto;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+md-dialog {
+  min-width: 0;
 }
